--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>ascii-art</title>
     <link rel="stylesheet" href="./ui/styles.css">
 </head>
+
 <body>
     <div class="wrapper">
         <div class="container">
@@ -14,7 +16,7 @@
             <div class="glow">ascii&nbsp;art</div>
             <p class="subtitle">2077</p>
         </div>
-     
+
         <form class="form" method="POST" action="/ascii-art">
             <textarea class="input" name="input" cols="20" rows="5" spellcheck="false"></textarea>
             <div class="btns">
@@ -23,7 +25,8 @@
                 <button type="submit" class="buttons th-btn" value="thinkertoy" name="font">thinkertoy</button>
             </div>
         </form>
+        <div class="pre">{{.}}</div>
     </div>
-    <pre>{{.}}</pre>
 </body>
+
 </html>
